--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>🖥CV Steven Mendoza</title>
+  <link rel="stylesheet" href="css/styles.css">
+
+</head>
+
+<body>
+
   <table>
     <tr>
       <td><img src="Mi Foto.jpeg" alt=0 width="200px" height="200px"></td>
@@ -22,11 +28,7 @@
       </td>
     </tr>
   </table>
-  <hr>
-</head>
-
-<body>
-
+<hr>
   <h2>Experiencia Laboral</h2>
   <ul>
     <li>
@@ -69,18 +71,18 @@
     <tr>
       <td>
         <p> <b>Septiembre 2020<br>
-            Buenos Aires</b>
+            Buenos Aires</b></p>
       </td>
-      <td>Certificado de Microsoft: Microsoft 365 Fundamentals <br>
+      <td><p>Certificado de Microsoft: Microsoft 365 Fundamentals <br>
         Microsoft </td>
       </p>
     </tr>
     <tr>
       <td>
         <p> <b>Agosto 2020 <br>
-            Buenos Aires </b>
+            Buenos Aires </b></p>
       </td>
-      <td>Certificado de Microsoft: Azure Fundamentals <br>
+      <td><p>Certificado de Microsoft: Azure Fundamentals <br>
         Microsoft <br></td>
       </p>
     </tr>
@@ -88,18 +90,18 @@
     <tr>
       <td>
         <p> <b>Sep 2018 - Dic 2018 <br>
-            Venezuela </b>
+            Venezuela </b></p>
       </td>
-      <td>CCNA Routing and Switching (Otro / Abandonado) <br>
+      <td><p>CCNA Routing and Switching (Otro / Abandonado) <br>
         Academia Cisco(Colegio Americano) </td>
       </p>
     </tr>
     <tr>
       <td>
         <p> <b>May 2008 - Mar 2017 <br>
-            Venezuela </b>
+            Venezuela </b></p>
       </td>
-      <td>Analista de Sistemas (Universitario / Graduado) <br>
+      <td><p>Analista de Sistemas (Universitario / Graduado) <br>
         Universidad Centro Occidental Lisandro Alvarado <br></td>
       </p>
     </tr>
